--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
         <a href="#" class="logo">Portfolio</a>
         <div class="toggle"></div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </header>
-    <section class="banner">
+    <section class="banner" id="home">
         <div class="textBox">
             <h2>Welcome, I'm<br><span>Joshua Azzam Rehanek.</span> </h2>
             <h3>Full Stack Web Developer</h3>
             <a href="#" class="btn">About Me</a>
         </div>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="heading">
             <h2>About Me</h2>
         </div>
@@ -51,13 +51,18 @@
                     <p>I come from a training background that has honed my
                     ability to communicate with a team at a high-level. I'm a quick learner and a hard worker who enjoys
                     engaging in new challenges within my work environment.</p>
+                    <br>
+                    <br>
+                    <a class="link" href="https://www.linkedin.com/in/joshua-rehanek-a266a0200/" class="button" target="_blank"><img src="https://img.icons8.com/cute-clipart/64/000000/linkedin.png"/></a>
+                    <a class="link" href="https://github.com/joshrehanek" class="button" target="_blank"><img src="https://img.icons8.com/dusk/64/000000/github.png"/></a>
+                    <a class="link" href="./assets/images/Resume.pdf" download="./assets/images/Resume.pdf"><img src="https://img.icons8.com/nolan/64/open-resume.png"/></a>
             </div>
             <div class="w50">
                 <img class="about" src="assets/images/Cloud-Castle-Kat-Flower2.jpg">
             </div>
         </div>
     </section>
-    <section class="services">
+    <section class="services" id="services">
         <div class="heading">
             <h2>Services</h2>
             <p>Fun & functional websites your customers will enjoy using.</p>
@@ -81,7 +86,7 @@
             </div>
         </div>
     </section>
-    <section class="products">
+    <section class="products" id="products">
         <div class="heading">
             <h2>Latest Work</h2>
         </div>
@@ -138,7 +143,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="heading">
             <h2>Contact</h2>
         </div>
@@ -177,7 +182,6 @@
             </div>
             <div class="formBox">
                 <form>
-                    <h3>Contact Me</h3>
                     <input type="text" name="" placeholder="Name">
                     <input type="email" name="" placeholder="Email">
                     <textarea placeholder="Message"></textarea>
