adds about me link to btn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="textBox">
             <h2>Welcome, I'm<br><span>Joshua Azzam Rehanek.</span> </h2>
             <h3>Full Stack Web Developer</h3>
-            <a href="#" class="btn">About Me</a>
+            <a href="#about" class="btn">About Me</a>
         </div>
     </section>
     <section class="about" id="about">
