--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#home" onclick="toggleHomebar();">Home</a></li>
             <li><a href="#about" onclick="toggleHomebar();">About Me</a></li>
             <li><a href="#services" onclick="toggleHomebar();">Services</a></li>
-            <li><a href="#products" onclick="toggleHomebar();">Products</a></li>
+            <li><a href="#projects" onclick="toggleHomebar();">Projects</a></li>
             <li><a href="#contact" onclick="toggleHomebar();">Contact</a></li>
         </ul>
     </header>
@@ -45,18 +45,18 @@
             <div class="contentBox w50">
                 <h3>Full Stack Web Developer</h3>
                 <h4>I am a full-stack web developer looking for new opportunities in the tech industry. I work with
-                    HTML5, CSS, Javascript, jQuery, node.js, sequelize, MySQL, & more. Each application is produced with
-                    a focus on responsiveness & accessibility.</h4>
-                    <br>    
-                    <br>               
-                    <p>I come from a training background that has honed my
-                    ability to communicate with a team at a high-level. I'm a quick learner and a hard worker who enjoys
-                    engaging in new challenges within my work environment.</p>
-                    <br>
-                    <br>
-                    <a class="link" href="https://www.linkedin.com/in/joshua-rehanek-a266a0200/" class="button" target="_blank"><img src="https://img.icons8.com/cute-clipart/64/000000/linkedin.png"/></a>
-                    <a class="link" href="https://github.com/joshrehanek" class="button" target="_blank"><img src="https://img.icons8.com/dusk/64/000000/github.png"/></a>
-                    <a class="link" href="./assets/images/Resume.pdf" download="./assets/images/Resume.pdf"><img src="https://img.icons8.com/nolan/64/open-resume.png"/></a>
+                    React, Javascript, node.js, Mongoose, Express, HTML5, CSS, jQuery, sequelize, MySQL, & more. Each application is produced with a focus on responsiveness & accessibility.</h4>
+                <br>
+                <br>
+                <p>I come from a training background that has honed my ability to communicate with a team at a high-level. I'm a quick learner and a hard worker who enjoys engaging in new challenges within my work environment.</p>
+                <br>
+                <br>
+                <a class="link" href="https://www.linkedin.com/in/joshua-rehanek-a266a0200/" class="button"
+                    target="_blank"><img src="https://img.icons8.com/cute-clipart/64/000000/linkedin.png" /></a>
+                <a class="link" href="https://github.com/joshrehanek" class="button" target="_blank"><img
+                        src="https://img.icons8.com/dusk/64/000000/github.png" /></a>
+                <a class="link" href="./assets/images/Resume.pdf" download="./assets/images/Resume.pdf"><img
+                        src="https://img.icons8.com/nolan/64/open-resume.png" /></a>
             </div>
             <div class="w50">
                 <img class="about" src="assets/images/Cloud-Castle-Kat-Flower2.jpg">
@@ -87,9 +87,9 @@
             </div>
         </div>
     </section>
-    <section class="products" id="products">
+    <section class="products" id="projects">
         <div class="heading">
-            <h2>Products</h2>
+            <h2>Projects</h2>
         </div>
         <div class="content">
             <div class="productsBox">
